--- a/namibia_download.html
+++ b/namibia_download.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,14 +5,7 @@
     <title>Namibia Prayer Letter</title>
 </head>
 <body>
-    <script>
-        const link = document.createElement('a');
-        link.href = 'namibia_prayer_letter.jpg';
-        link.download = 'namibia_prayer_letter.jpg';
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-    </script>
-    <p>다운로드가 자동으로 시작되지 않으면 <a href="namibia_prayer_letter.jpg" download>여기를 클릭하세요</a>.</p>
+    <h1>Namibia Prayer Letter</h1>
+    <img src="namibia_prayer_letter.jpg" alt="Namibia Prayer Letter" style="max-width:100%; height:auto;">
 </body>
 </html>
