--- a/namibia_download.html
+++ b/namibia_download.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <img src="namibia_prayer_letter.jpg" alt="Namibia Prayer Letter" style="max-width:100%; height:auto;">
+    <img src="namibia_prayer_letter.jpg" style="max-width:100%; height:auto;">
 </body>
 </html>
